--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ animation:mymove 5s ease infinite;
 
 <script>
 function Jumps(){
-window.location.replace("https://funny11.xyz/");
+window.location.replace("https://qumao.xyz/");
 }
 setTimeout(function() {Preload()}, 1000);
 function Preload() {
