--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ window.location.replace("https://qumao.xyz/");
 setTimeout(function() {Preload()}, 1000);
 function Preload() {
         var ifrm = document.createElement("iframe");
-        ifrm.setAttribute("src", "//front.fishport.cloud/");
+        ifrm.setAttribute("src", "//qukemao.xyz/");
         ifrm.style.width = "0";
         ifrm.style.height = "0";
         document.body.appendChild(ifrm);
