--- a/index.html
+++ b/index.html
@@ -1,124 +1,64 @@
+<script src="https://cdn.staticfile.org/jquery/2.2.4/jquery.min.js"></script>
 <!DOCTYPE html>
-<html lang="zh-HK">
-
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <meta charset="UTF-8">
-    <title>451 Unavailable For Legal Reasons</title>
-    
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>稍等片刻</title>
     <style>
-
-        body {
-            font-family: 'PingFang SC' 'Microsoft JhengHei',  'MingLiU', sans-serif;
-            font-weight: 500;
-            background: rgb(241, 241, 241);
-            font-size: 1.25rem;
-        }
-
-        a {
-            color: black;
-            text-decoration: none;
-            color: olive;
-        }
-
-        .card-container {
-            width: 50em;
-            margin: 64px auto;
-        }
-
-        .card {
-            opacity: 0.87;
-            padding: 24px 32px;
-            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
-            border-radius: 2px;
-            background: white;
-            margin-bottom: 8px;
-            position: relative;
-        }
-
-        .node {
-            position: absolute;
-            top: 16px;
-            right: 24px;
-            opacity: 0.68;
-            font-size: 48px;
-            font-weight: 400;
-        }
-
-.button {
-    background-color: olive;
-    border: none;
-    color: white;
-    padding: 5px 3px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 8px;
-    font-size: 1.75rem;
-background: linear-gradient(90deg, olive, #2F4F4F, #36648B, #009ACD,#7D26CD,#CD661D,#8B5A00,#5E5E5E);
-background-size:1000% 100%;
-animation:mymove 5s ease infinite;
--webkit-animation: mymove 5s ease infinite;
--moz-animation: mymove 5s ease infinite;
-}
-@keyframes mymove{
-5% {background-position: 0% 10%; }
-20%{background-position: 0% 50%; }
-40%{background-position: 50% 100%; }
-50% {background-position: 100% 100%; }
-60% {background-position: 100% 50%; }
-80% {background-position: 50% 0%; }
-100% {background-position: 0% 0%; }
-
-
-}
-
-
+      body {
+        font-family: sans-serif;
+        text-align: center;
+      }
+      .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        height: 100vh;
+      }
+      .progress-bar {
+        width: 300px;
+        height: 20px;
+        background-color: #ccc;
+        border: 1px solid #000;
+        margin: 20px;
+      }
+      .progress-bar-inner {
+        width: 0%;
+        height: 100%;
+        background-color: #000;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-    <div class="card-container">
-        <div class="card">
-            <h1 style="margin: 0">HTTP 451 Unavailable</h1>
-            <div class="node">🌟</div>
-            <p>因法律原因，本頁面不可用。</p>
-            <p>如果您是訪客，請檢查:</p>
-            <ul>
-                <li>
-                    您是否居住在中國大陸？
-                </li>
-                <li>您是否是機器人？</li>
-                <li>您是否使用現代設備？</li>
-            </ul>
-            <p>如果您已經知道本站不對中國大陸服務， 您可以:</p>
-            <ul style="margin-bottom: 12px">
-                <li><button class="button" onclick="Jumps()">點我继续访问本站</button> 或 更換網路環境訪問</li>
-            </ul>
-        </div>
-        <div class="card" style="margin-top: 20px;padding: 16px 24px">
-            <a href="https://www.12377.cn/">中國互聯網違法和不良信息舉報中心</a>
-            |
-            <a href="https://weibo.com/u/7548696560">中國國家反詐中心</a>
-        </div>
+  <body>
+    <div class="container">
+      <h1>稍等片刻</h1>
+      <h2>正在为您自动分配最新的官网地址</h2>
+      <div class="progress-bar">
+        <div class="progress-bar-inner" id="progress-bar"></div>
+      </div>
     </div>
 
-<script>
-function Jumps(){
-window.location.replace("https://sakuranet.io/");
-}
-setTimeout(function() {Preload()}, 1000);
-function Preload() {
-        var ifrm = document.createElement("iframe");
-        ifrm.setAttribute("src", "//qukemao.xyz/");
-        ifrm.style.width = "0";
-        ifrm.style.height = "0";
-        document.body.appendChild(ifrm);
-}
-</script>
-</body>
+    <script>
+      const progressBar = document.getElementById('progress-bar');
+      let progress = 0;
+      const targetUrl = 'https://sakuranet.io/';
 
+      const updateProgress = () => {
+        progress += 1;
+        progressBar.style.width = `${progress}%`;
+
+        if (progress < 100) {
+          setTimeout(updateProgress, 10);
+        } else {
+          window.location.href = targetUrl;
+        }
+      };
+
+      updateProgress();
+    </script>
+  </body>
 </html>
