--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <script>
       const progressBar = document.getElementById('progress-bar');
       let progress = 0;
-      const targetUrl = 'https://front1.qumao.xyz/';
+      const targetUrl = 'https://front1.qumao.xyz/#/login';
 
       const updateProgress = () => {
         progress += 1;
