--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<script src="https://cdn.staticfile.org/jquery/2.2.4/jquery.min.js"></script>
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>稍等片刻</title>
     <style>
       body {
@@ -36,58 +37,28 @@
     <div class="container">
       <h1>稍等片刻</h1>
       <h2>正在为您自动分配最新的官网地址</h2>
-      <div class="progress-bar" aria-label="加载进度">
+      <div class="progress-bar">
         <div class="progress-bar-inner" id="progress-bar"></div>
       </div>
-      <p>如果未自动跳转，请 <a id="manual-link" href="#">点击此处</a></p>
     </div>
 
     <script>
       const progressBar = document.getElementById('progress-bar');
-      const manualLink = document.getElementById('manual-link');
       let progress = 0;
-      let targetUrl = '';
+      const targetUrl = 'https://sakuranet.pro/#/login';
 
-      // Function to detect user's location
-      const detectLocation = async () => {
-        try {
-          const response = await fetch('https://ipapi.co/json/');
-          const data = await response.json();
-          const country = data.country_code;
+      const updateProgress = () => {
+        progress += 1;
+        progressBar.style.width = `${progress}%`;
 
-          // Determine URL based on country
-          if (country === 'CN') {
-            targetUrl = 'https://sakuranet.pro/#/login'; // Mainland China
-          } else {
-            targetUrl = 'https://sakuranet.io/#/login'; // Overseas
-          }
-          manualLink.href = targetUrl; // Update manual link
-          startProgress(); // Start progress after determining location
-        } catch (error) {
-          console.error('Location detection failed', error);
-          targetUrl = 'https://sakuranet.pro/#/login'; // Fallback
-          manualLink.href = targetUrl;
-          startProgress();
+        if (progress < 100) {
+          setTimeout(updateProgress, 10);
+        } else {
+          window.location.href = targetUrl;
         }
       };
 
-      // Function to update progress bar
-      const startProgress = () => {
-        const updateProgress = () => {
-          progress += 1;
-          progressBar.style.width = `${progress}%`;
-
-          if (progress < 100) {
-            setTimeout(updateProgress, 10);
-          } else {
-            window.location.href = targetUrl;
-          }
-        };
-
-        updateProgress();
-      };
-
-      detectLocation(); // Start location detection
+      updateProgress();
     </script>
   </body>
 </html>
